# mcp-dayone

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README-FORK.md  README.md  claude-desktop.js  install.sh  package-lock.json  package.json  pyproject.toml  server.js  smithery-publish.js  smithery.toml  test.js  test_enhancements.py  test_setup.py
src/mcp_dayone/: __init__.py  server.py  tools.py
